added Annie and made margins smaller to add acting.

--- a/resume/education.tex
+++ b/resume/education.tex
@@ -1,5 +1,4 @@
 \cvsection{Education and Training}
-\cvsubsection{Singing}
 \begin{cventries}
   \cventrytab
     {Master of Arts}
@@ -11,9 +10,6 @@
     {Musical Theater Voice}
     {NYC}
     {Sabina Petra, Mikhail Svetlov}
-\end{cventries}
-\cvsubsection{Dancing}
-\begin{cventries}
     \cventrytab
       {Tap Dance Traning License}
       {Tap Dance Training Program}
@@ -24,4 +20,9 @@
       {Theatre Dance/Ballet/Tap}
       {BDC/STEPS, NYC}
       {Deanna Doyle, Scott Thompson, Barbara Duffy, Ray Hesselink}
+    \cventrytab
+      {}
+      {Acting technique}
+      {T.\,Schreiber, NYC}
+      {Pamela Scott}
 \end{cventries}
