--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -1,6 +1,11 @@
 \cvsection{Theater Experience}
 \begin{cventries}
   \cventrytabb %for upcoming events
+    {Grace}%position
+    {Annie Warbucks}%title
+    {St. Hugh Productions, Huntington}%location
+    {upcoming 2017} %upcoming
+  \cventrytab 
     {Usherette, Stormtrooper Rolf, Tap Ensemble}%position
     {The Producers}%title
     {Rockaway Theatre Company, NYC}%location
