updated Funny Girl show and adjusted cventratab margins. Nov2017 version.

--- a/resume/details.tex
+++ b/resume/details.tex
@@ -2,7 +2,7 @@
 \begin{cvskills}
   \cvskill
     {Vocal Range}%position
-    {Ab3--C6}%title
+    {G3--D6}%title
   \cvskill
     {Attributes}%position
     {{\scshape Height}: 5'6''{\enskip\cdotp\enskip}{\scshape Weight}: 115\,lbs{\enskip\cdotp\enskip}{\scshape Hair}: light brown{\enskip\cdotp\enskip}{\scshape Eyes}: brown}%title
