--- a/resume/education.tex
+++ b/resume/education.tex
@@ -22,7 +22,7 @@
       {Deanna Doyle, Scott Thompson, Barbara Duffy, Ray Hesselink}
     \cventrytab
       {}
-      {Acting technique}
+      {Acting Technique}
       {T.\,Schreiber, NYC}
       {Pamela Scott}
 \end{cventries}
