--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -1,10 +1,15 @@
 \cvsection{Theater Experience}
 \begin{cventries}
   \cventrytabb %for upcoming events
+    {Ziegfeld Showgirl, Dancer}%position
+    {Funny Girl}%title
+    {Plaza Theatrical Prod., Lynbrook, NY}%location
+    {upcoming 2018} %upcoming
+  \cventrytab %for upcoming events
     {Grace}%position
     {Annie Warbucks}%title
-    {St. Hugh Productions, Huntington}%location
-    {upcoming 2017} %upcoming
+    {St. Hugh Prod., Huntington, NY}%location
+    {} %
   \cventrytab 
     {Usherette, Stormtrooper Rolf, Tap Ensemble}%position
     {The Producers}%title
@@ -25,11 +30,6 @@
     {Four Seasons Dance Night}
     {Kronenzentrum Theater, Germany}
     {} 
-  \cventrytab
-    {Tap Dancer}
-    {Mixed Pickles}
-    {Kronenzentrum Theater, Germany}
-    {}
   \cventrytab
     {Tap Dance Duo}
     {Just Us 2}
