Apr2018 update: Plaza stuff.

--- a/resume/education.tex
+++ b/resume/education.tex
@@ -9,7 +9,7 @@
     {}
     {Musical Theater Voice}
     {NYC}
-    {Sabina Petra, Mikhail Svetlov}
+    {Claudia Friedlander, Sabina Petra}
     \cventrytab
       {Tap Dance Traning License}
       {Tap Dance Training Program}
@@ -22,7 +22,7 @@
       {Deanna Doyle, Scott Thompson, Barbara Duffy, Ray Hesselink}
     \cventrytab
       {}
-      {Acting Technique}
-      {T.\,Schreiber, NYC}
-      {Pamela Scott}
+      {Acting}
+      {Take\,2 Actor's Studio/T.\,Schreiber, NY}
+      {Regina Schneider, Pamela Scott}
 \end{cventries}
