--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -1,11 +1,31 @@
 \cvsection{Theater Experience}
 \begin{cventries}
   \cventrytabb %for upcoming events
+    {Turtle, Bird}%position
+    {A Year With Frog and Toad}%title
+    {Plaza Theatrical Prod., Lynbrook, NY}%location
+    {upcoming} %upcoming
+  \cventrytabb %for upcoming events
     {Ziegfeld Showgirl, Dancer}%position
     {Funny Girl}%title
     {Plaza Theatrical Prod., Lynbrook, NY}%location
-    {upcoming 2018} %upcoming
-  \cventrytab %for upcoming events
+    {ongoing} %upcoming
+  \cventrytab %
+    {Wardrobe, Silly Girl}%position
+    {Beauty and the Beast}%title
+    {Plaza Theatrical Prod., Lynbrook, NY}%location
+    {} %
+  \cventrytab %
+    {Jitterbug, Munchkin}%position
+    {Wizard of Oz}%title
+    {Plaza Theatrical Prod., Lynbrook, NY}%location
+    {} %
+  \cventrytab %
+    {Cat}%position
+    {Pinocchio}%title
+    {Plaza Theatrical Prod., Lynbrook, NY}%location
+    {} %        
+  \cventrytab %
     {Grace}%position
     {Annie Warbucks}%title
     {St. Hugh Prod., Huntington, NY}%location
@@ -14,7 +34,7 @@
     {Usherette, Stormtrooper Rolf, Tap Ensemble}%position
     {The Producers}%title
     {Rockaway Theatre Company, NYC}%location
-    {} %upcoming
+    {} %
   \cventrytab
     {Opera Chorus Singer}%position
     {Mozart's Zaide}%title
@@ -24,20 +44,5 @@
     {1\textsuperscript{st} Lady, Pamina}
     {Mozart's Magic Flute}
     {Beneficial Concerts, Germany}
-    {}
-  \cventrytab
-    {Tap Dancer}
-    {Four Seasons Dance Night}
-    {Kronenzentrum Theater, Germany}
-    {} 
-  \cventrytab
-    {Tap Dance Duo}
-    {Just Us 2}
-    {Various Performances, Germany}
-    {}
-  \cventrytab
-    {Chorus Girl}
-    {Jessica}
-    {Kronenzentrum Theater, Germany}
     {}
 \end{cventries}
