--- a/resume.tex
+++ b/resume.tex
@@ -63,7 +63,7 @@
 %\github{posquit0}
 %\linkedin{posquit0}
 %%% Optionals
-\position{Singer{\enskip\cdotp\enskip}Dancer}
+\position{Singer{\enskip\cdotp\enskip}Dancer{\enskip\cdotp\enskip}Actor}
 %\quote{``Make the change that you want to see in the world."}
 
 
