--- a/resume/details.tex
+++ b/resume/details.tex
@@ -8,5 +8,5 @@
     {{\scshape Height}: 5'6''{\enskip\cdotp\enskip}{\scshape Weight}: 115\,lbs{\enskip\cdotp\enskip}{\scshape Hair}: light brown{\enskip\cdotp\enskip}{\scshape Eyes}: brown}%title
   \cvskill
     {EAD}
-    {work permit valid until 09/08/2018}
+    {valid work permit}
 \end{cvskills}
