small Aug 2018 changes.@

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -4,7 +4,7 @@
     {Turtle, Bird}%position
     {A Year With Frog and Toad}%title
     {Plaza Theatrical Prod., Lynbrook, NY}%location
-    {upcoming} %upcoming
+    {ongoing} %upcoming
   \cventrytabb %for upcoming events
     {Ziegfeld Showgirl, Dancer}%position
     {Funny Girl}%title
