--- a/resume.tex
+++ b/resume.tex
@@ -18,7 +18,7 @@
 %     Configuration
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Themes: Awesome-CV
-\documentclass[12pt, letter]{awesome-cv}
+\documentclass[12pt, A4]{awesome-cv}
 
 %%% Override a directory location for fonts(default: 'fonts/')
 \fontdir[fonts/]
@@ -56,7 +56,7 @@
 %%% Essentials
 \name{Veronika}{Bochynek}
 \address{~}
-\mobile{+1 (516) 853-5196} 
+\mobile{+49 173 672-8494} 
 %%% Social
 \email{veronika@veronika.dance}
 \homepage{http://veronika.dance}
@@ -72,7 +72,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Make a footer for CV with three arguments(<left>, <center>, <right>)
 \makecvfooter
-  {August 2018}
+  {February 2022}
   {Veronika Bochynek~~~·~~~R\'{e}sum\'{e}}
   %{\thepage}
   {}
