--- a/resume/education.tex
+++ b/resume/education.tex
@@ -19,10 +19,10 @@
       {}
       {Theatre Dance/Ballet/Tap}
       {BDC/STEPS, NYC}
-      {Deanna Doyle, Scott Thompson, Barbara Duffy, Ray Hesselink}
+      {Nancy Koch, Deanna Doyle, Barbara Duffy, Ray Hesselink}
     \cventrytab
       {}
-      {Acting}
-      {Take\,2 Actor's Studio/T.\,Schreiber, NY}
-      {Regina Schneider, Pamela Scott}
+      {Meisner Acting}
+      {T.\,Schreiber, NYC}
+      {Robert Verlaque, Pamela Scott, Page Clements}
 \end{cventries}
