--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -1,15 +1,20 @@
 \cvsection{Theater Experience}
 \begin{cventries}
   \cventrytabb %for upcoming events
+    {Ursula, Frenchy}%position
+    {Sweet Charity}%title
+    {Boardhollow Theatre Company, East Islip, NY}%location
+    {} %upcoming
+  \cventrytabb %for upcoming events
     {Turtle, Bird}%position
     {A Year With Frog and Toad}%title
     {Plaza Theatrical Prod., Lynbrook, NY}%location
-    {ongoing} %upcoming
+    {} %upcoming
   \cventrytabb %for upcoming events
     {Ziegfeld Showgirl, Dancer}%position
     {Funny Girl}%title
     {Plaza Theatrical Prod., Lynbrook, NY}%location
-    {ongoing} %upcoming
+    {} %upcoming
   \cventrytab %
     {Wardrobe, Silly Girl}%position
     {Beauty and the Beast}%title
