--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -2,7 +2,7 @@
 \begin{cvskills}
   \cvskill
     {Dancing}
-    {Lindy Hop, Charleston}
+    {Lindy Hop, Charleston, Balboa}
   \cvskill
     {Instruments}
     {piano, double bass, recorder (soprano, alt, bass)}
