--- a/resume/details.tex
+++ b/resume/details.tex
@@ -2,11 +2,8 @@
 \begin{cvskills}
   \cvskill
     {Vocal Range}%position
-    {G3--D6}%title
+    {G3--D6 (g--d{'}{'}{'})}%title
   \cvskill
     {Attributes}%position
-    {{\scshape Height}: 5'6''{\enskip\cdotp\enskip}{\scshape Weight}: 115\,lbs{\enskip\cdotp\enskip}{\scshape Hair}: light brown{\enskip\cdotp\enskip}{\scshape Eyes}: brown}%title
-  \cvskill
-    {EAD}
-    {valid work permit}
+    {{\scshape Height}: 5'6'' (177\,cm){\enskip\cdotp\enskip}{\scshape Weight}: 120\,lbs (54\,kg){\enskip\cdotp\enskip}{\scshape Hair}: light brown{\enskip\cdotp\enskip}{\scshape Eyes}: brown}%title
 \end{cvskills}
