correct height error

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -3,7 +3,7 @@
   \cventrytabb %for upcoming events
     {Ursula, Frenchy}%position
     {Sweet Charity}%title
-    {Boardhollow Theatre Company, East Islip, NY}%location
+    {Boardhollow Theatre Comp., East Islip, NY}%location
     {} %upcoming
   \cventrytabb %for upcoming events
     {Turtle, Bird}%position
