--- a/resume.tex
+++ b/resume.tex
@@ -59,7 +59,7 @@
 \mobile{+49 173 672-8494} 
 %%% Social
 \email{veronika@veronika.dance}
-\homepage{http://veronika.dance}
+\homepage{https://veronika.dance}
 %\github{posquit0}
 %\linkedin{posquit0}
 %%% Optionals
