--- a/resume/details.tex
+++ b/resume/details.tex
@@ -5,5 +5,5 @@
     {G3--D6 (g--d\textquotesingle\textquotesingle\textquotesingle)}%title
   \cvskill
     {Attributes}%position
-    {{\scshape Height}: 5\textquotesingle 6\textquotesingle\textquotesingle (167\,cm){\enskip\cdotp\enskip}{\scshape Weight}: 120\,lbs (54\,kg){\enskip\cdotp\enskip}{\scshape Hair}: light brown{\enskip\cdotp\enskip}{\scshape Eyes}: brown}%title
+    {{\scshape Height}: 5\textquotesingle 6\textquotesingle\textquotesingle ~(169\,cm){\enskip\cdotp\enskip}{\scshape Weight}: 120\,lbs (54\,kg){\enskip\cdotp\enskip}{\scshape Hair}: light brown{\enskip\cdotp\enskip}{\scshape Eyes}: brown}%title
 \end{cvskills}
