--- a/resume/education.tex
+++ b/resume/education.tex
@@ -3,26 +3,26 @@
   \cventrytab
     {Master of Arts}
     {Classical Voice}
-    {University of Wuerzburg, Germany}
+    {University of W\"urzburg, Germany}
     {Music Education Program}
  \cventrytab
     {}
     {Musical Theater Voice}
-    {NYC}
+    {NYC, USA}
     {Claudia Friedlander, Sabina Petra}
     \cventrytab
       {Tap Dance Traning License}
       {Tap Dance Training Program}
-      {Ray's World of Dance, Germany}
+      {Ray's World of Dance, Stuttgart, Germany}
       {two-year professional program with Ray Lynch}
     \cventrytab
       {}
       {Theatre Dance/Ballet/Tap}
-      {BDC/STEPS, NYC}
+      {BDC/STEPS, NYC, USA}
       {Nancy Koch, Deanna Doyle, Barbara Duffy, Ray Hesselink}
     \cventrytab
       {}
       {Meisner Acting}
-      {T.\,Schreiber, NYC}
+      {T.\,Schreiber, NYC, USA}
       {Robert Verlaque, Pamela Scott, Page Clements}
 \end{cventries}
