--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -3,42 +3,42 @@
   \cventrytabb %for upcoming events
     {Ursula, Frenchy}%position
     {Sweet Charity}%title
-    {Boardhollow Theatre Comp., East Islip, NY}%location
+    {Boardhollow Theatre, East Islip, NY, USA}%location
     {} %upcoming
   \cventrytabb %for upcoming events
     {Turtle, Bird}%position
     {A Year With Frog and Toad}%title
-    {Plaza Theatrical Prod., Lynbrook, NY}%location
+    {Plaza Theatrical Prod., Lynbrook, NY, USA}%location
     {} %upcoming
   \cventrytabb %for upcoming events
     {Ziegfeld Showgirl, Dancer}%position
     {Funny Girl}%title
-    {Plaza Theatrical Prod., Lynbrook, NY}%location
+    {Plaza Theatrical Prod., Lynbrook, NY, USA}%location
     {} %upcoming
   \cventrytab %
     {Wardrobe, Silly Girl}%position
     {Beauty and the Beast}%title
-    {Plaza Theatrical Prod., Lynbrook, NY}%location
+    {Plaza Theatrical Prod., Lynbrook, NY, USA}%location
     {} %
   \cventrytab %
     {Jitterbug, Munchkin}%position
     {Wizard of Oz}%title
-    {Plaza Theatrical Prod., Lynbrook, NY}%location
+    {Plaza Theatrical Prod., Lynbrook, NY, USA}%location
     {} %
   \cventrytab %
     {Cat}%position
     {Pinocchio}%title
-    {Plaza Theatrical Prod., Lynbrook, NY}%location
+    {Plaza Theatrical Prod., Lynbrook, NY, USA}%location
     {} %        
   \cventrytab %
     {Grace}%position
     {Annie Warbucks}%title
-    {St. Hugh Prod., Huntington, NY}%location
+    {St. Hugh Prod., Huntington, NY, USA}%location
     {} %
   \cventrytab 
     {Usherette, Stormtrooper Rolf, Tap Ensemble}%position
     {The Producers}%title
-    {Rockaway Theatre Company, NYC}%location
+    {Rockaway Theatre Company, NYC, USA}%location
     {} %
   \cventrytab
     {Opera Chorus Singer}%position
