--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -5,11 +5,11 @@
     {Lindy Hop, Charleston, Balboa}
   \cvskill
     {Instruments}
-    {piano, double bass, recorder (soprano, alt, bass)}
+    {Piano, double bass, recorder (soprano, alt, bass)}
   \cvskill
     {Sports}
-    {swimming (life guard), Judo, skiing, ice-skating, rollerblading}
+    {Swimming (life guard), Judo, skiing, ice-skating, rollerblading}
   \cvskill
     {Languages}
-    {English, German, Polish, Spanish (all fluent)}
+    {German (native), Polish (native), English (fluent), Spanish (fluent)}
 \end{cvskills}
